# denots_iclr2025

./: .gitignore  Dockerfile  README.md  credentials  docker-compose.yml  launch_container  pyproject.toml  repository.md
config/attacks/: main.yaml
config/attacks/attack/: change.yaml  drop.yaml
config/forecasting/: main.yaml
config/forecasting/backbone/: denots.yaml  latentode.yaml  ncde.yaml  roformer.yaml  tempformer.yaml
config/forecasting/benchmark/: pendulum_angles.yaml  pendulum_angles_regular.yaml  sine2.yaml
config/supervised/: main.yaml
config/supervised/backbone/: denots.yaml  elmanrnn.yaml  mamba.yaml  ncde.yaml  nrde.yaml  rnn.yaml  roformer.yaml  tempformer.yaml
config/supervised/benchmark/: bump20.yaml  is.yaml  pendulum.yaml  pendulum_small.yaml  sepsis.yaml  sinemix2.yaml  uwgl.yaml
config/supervised/override/: README.md  mamba_sepsis.yaml  roformer_sepsis.yaml
data_import/: README.md  bump.ipynb  download_sepsis.sh  generate_pendulum.ipynb  pendulum_angles.ipynb  preprocess_sepsis.ipynb  sine.ipynb  sine_mix.ipynb  uae.ipynb
experiments/: attack.py  benchmark.py  forecasting.py  supervised.py
src/: datamodule.py  datasource.py  experiment_management.py  iterfunctools.py  mask_utils.py  nan_utils.py  omegaconf_resolvers.py  polars_utils.py  rounding.py  tensordict_utils.py  typevars.py
src/datasets/: __init__.py  attack.py  base.py
src/interp/: __init__.py  base.py  forecasting.py  natural_cubic.py  preprocess.py
src/modules/: __init__.py  forecasting.py  supervised.py
src/nn/: __init__.py  encoder.py  layers.py  utils.py
src/nn/forecasting/: __init__.py  base.py  denots.py  latentode.py  ncde.py  roformer.py  tempformer.py
src/nn/losses/: supervised.py
src/nn/supervised/: __init__.py  base.py  denots.py  (+5 more)
(+2 files in other folders)
